2004-07-14  state  <state@bluefalcon>

	* ChangeLog, nb:
	Fixed verbosity, so that only lines requiring input are not effected.

2004-07-12  state  <state@bluefalcon>

	* ChangeLog, nb (create_weblog):
	Fixed '--description' option, so it works.

	* ChangeLog, nb (show_help):
	Added missing parameters for options requiring them.

2004-07-11  state  <state@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Minor correction in "Managing Entries and Categories" section of manual.

	* ChangeLog, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/index.xml, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/cat_1.htm, default/parts/fortune.htm, default/parts/news.htm, docs/nanoblogger.html, nb:
	- Added more help to default entry.
	- Updated "Managing Entries and Categories" section of manual.
	- Replaced old '--importfile' with new '--message' option.
	- Added new '--desc' option to set description of an entry.

2004-07-07  state  <state@bluefalcon>

	* ChangeLog, docs/nanoblogger.html, nb:
	- Added new tip to the "Tips and Tricks" section of manual.
	- Improved layout of "Tips and Tricks" section of manual.

	* default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/index.xml, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/cal.htm, default/parts/cat_1.htm, default/parts/fortune.htm, default/parts/news.htm, default/templates/main_index.htm, docs/nanoblogger.html, nb, plugins/archive/master_index.sh, plugins/blog_links.sh, plugins/blog_status.sh, ChangeLog:
	- Cleaned up inconsistencies in terminology.
	- Renamed variable, blog_update to weblog_update.

2004-07-06  state  <state@bluefalcon>

	* ChangeLog, docs/nanoblogger.html, nb:
	- Updated "Importing Entries" section of manual.
	- Updated terminology.
